--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
     "@tsparticles/slim": "^3.8.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "dompurify": "^3.2.6",
     "framer-motion": "^10.16.4",
     "lucide-react": "^0.292.0",
-    "motion": "^12.23.0",
     "next": "^14.2.30",
     "react": "^18",
     "react-dom": "^18",
@@ -34,6 +34,7 @@
     "zod": "^3.25.76"
   },
   "devDependencies": {
+    "@types/dompurify": "^3.0.5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
